# flappy-bird-ffi

./: .cspell.config.json  .gitignore  .gitmodules  Cargo.toml  README.md  build copy.rs  build.rs  memory.x
.cargo/: config.toml
c_src/.metadata/: .log4j2.xml  version.ini
c_src/.metadata/.plugins/org.eclipse.cdt.core/: lcd_tsc_mpu6050_drivers.1759140432713.pdom  lcd_tsc_mpu6050_drivers.language.settings.xml  lcd_tsc_mpu_drivers.1758550191691.pdom  lcd_tsc_mpu_drivers.language.settings.xml
c_src/.metadata/.plugins/org.eclipse.core.resources/: 1.snap  2.snap  3.snap  5.snap
c_src/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
c_src/.metadata/.plugins/org.eclipse.search/: dialog_settings.xml
c_src/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
c_src/.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
c_src/lcd_tsc_mpu6050_drivers/: .cproject  .mxproject  .project  STM32F303CCTX_FLASH.ld  lcd_tsc_mpu6050_drivers.ioc
c_src/lcd_tsc_mpu6050_drivers/Core/Inc/: display.h  font.h  gc9a01a.h  main.h  mpu6050.h
c_src/lcd_tsc_mpu6050_drivers/Core/Src/: display.c  font.c  gc9a01a.c  main.c  mpu6050.c  stm32f3xx_hal_msp.c  sysmem.c
c_src/lcd_tsc_mpu_drivers/: .cproject  .mxproject  .project  lcd_tsc_mpu_drivers.ioc  lcd_tsc_mpu_drivers.txt
c_src/lcd_tsc_mpu_drivers/Core/Inc/: main.h  stm32f3xx_hal_conf.h  (+1 more)
src/: assets.rs  board.rs  button.rs  color.rs  config.rs  display.rs  exti.rs  game.rs  gpio.rs  i2c_adapter.rs  itm_debug.rs  led.rs  main.rs  mcu.rs  mpu6050.rs  obstacle.rs  player.rs  proc.rs  reg.rs
(+101 files in other folders)
